Adds project API and entities.
